--- a/exercise/assets/css/style-3.css
+++ b/exercise/assets/css/style-3.css
@@ -268,6 +268,12 @@ p {
 .section-4{
     background-color: var(--trend-700);
 }
+.section-5{
+    background-color: var(--green-400);
+}
+.section-6{
+    background-color: var(--pink-400);
+}
 .section-4 h2,
 .section-4 p{
 color: #fff;
